Stop overlapping when viewport width is short

--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@
 
 .content {
     background: rgb(235, 235, 235);
+    display: grid;
+    grid-template: 1fr 1fr / minmax(400px, 3fr) 1fr; 
+    grid-template-areas: "projects announcements-trending"
+                         "projects announcements-trending";
+    gap: 20px;
+    padding: 20px 15px 50px;;
 }
 
 h1 {
@@ -199,15 +205,6 @@ button:hover {
     background-color: white;
     color: var(--main-color);
     box-shadow: 1px 1px 2px var(--main-color);
-}
-
-.content {
-    display: grid;
-    grid-template: 1fr 1fr / 3fr 1fr; 
-    grid-template-areas: "projects announcements-trending"
-                         "projects announcements-trending";
-    gap: 20px;
-    padding: 20px 15px 50px;
 }
 
 .projects {
